--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <Import Project="..\Directory.Build.targets" />
-  
+
   <Target Name="AddSkipGetTargetFrameworkToProjectReferences" Condition="'@(ProjectReference)' != ''">
     <ItemGroup>
       <ProjectReference>
@@ -27,7 +27,7 @@
     -->
     <GenerateCompiledExpressionsTempFilePathForEditing></GenerateCompiledExpressionsTempFilePathForEditing>
   </PropertyGroup>
-  
+
   <!--
   Hack workaround for not restoring each project. Instead, we turn off all the targets
   that require a `project.assets.json`, since ours will be empty anyway.
@@ -54,4 +54,15 @@
   <Target Name="DumpTargets" BeforeTargets="ResolveProjectReferences">
     <Message Text="DumpTargets> $(OutputPath), C=[$(Configuration)], CG=[$(ConfigurationGroup)], OG=[$(OSGroup)], TG=[$(TargetGroup)]" Importance="Low" />
   </Target>
-</Project> 
+
+  <!--
+    Harvesting supported versions can sometimes lead to unknown versions when harvesting a package
+    which has placeholders for older frameworks like net45. We should just exclude those from validation
+    since we cannot easily determine what they are without looking at each specific platform itself.
+  -->
+  <Target Name="ExcludeSupportedFrameworksWithUnknownVersion" BeforeTargets="ValidateLibraryPackage">
+    <ItemGroup>
+      <SupportedFramework Remove="@(SupportedFramework)" Condition="'%(SupportedFramework.Version)' == 'unknown'" />
+    </ItemGroup>
+  </Target>
+</Project>
